# pacsea

./: Cargo.toml
src/app/runtime/workers/: updates_helpers.rs
src/sources/: aur_vote.rs
src/theme/: terminal_query.rs
