#:schema https://json.schemastore.org/cargo.json
[package]
name = "pacsea"
version = "0.8.2"
edition = "2024"
authors = ["Firstpick <firstpick@users.noreply.github.com>"]
description = "A fast, friendly TUI for browsing and installing Arch and AUR packages with built-in news and security scanning"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Firstp1ck/Pacsea"
repository = "https://github.com/Firstp1ck/Pacsea"
documentation = "https://firstp1ck.github.io/Pacsea/pacsea/index.html"
keywords = ["tui", "archlinux", "aur", "package-manager", "terminal"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "Images/",
    "tests/",
    ".cursor/",
    ".github/",
    "AGENTS.md",
    "dev/",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9"  # Maintained fork of deprecated serde_yaml
tokio = { version = "1.50.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
unicode-width = "0.2.2"
which = "8.0.2"
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
syntect = "5.0"
fuzzy-matcher = "0.3"
rpassword = "7.5.0"
scraper = "0.26.0"
chrono = "0.4.44"
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
lru = "0.17.0"
ego-tree = "0.11.0"
rand = "0.10.1"
toml = "1.1.2"
zeroize = "1.8.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["poll", "fs", "user"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.27.0"
syn = { version = "2.0.117", features = ["full", "parsing", "extra-traits"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Enable cognitive complexity lint to catch overly complex functions
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
# Keep docs linting consistent with clippy naming
missing_docs_in_private_items = "warn"
# Ignored tests run with:
# cargo test -- --ignored